[tool.poetry]
name = "fastbuilder"
version = "0.2.0"
description = "Step-by-step tutorial for building a FastAPI data app"
authors = ["liquidcarbon <akscrps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"