[tool.poetry]
name = "fastbuilder"
version = "0.3.0"
description = "Step-by-step tutorial for building a FastAPI data app"
authors = ["liquidcarbon <akscrps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"